--- a/FO3Dll/FO3Dll.vcxproj
+++ b/FO3Dll/FO3Dll.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="InGameScripts.h" />
     <ClInclude Include="Initialization.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="Packets.h" />
     <ClInclude Include="PacketsAnal.h" />
     <ClInclude Include="PacketSender.h" />
     <ClInclude Include="PathFinder.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="InGameScripts.cpp" />
     <ClCompile Include="Initialization.cpp" />
     <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="Packets.cpp" />
     <ClCompile Include="PacketsAnal.cpp" />
     <ClCompile Include="PacketSender.cpp" />
     <ClCompile Include="PathFinder.cpp" />
